# traceable-research-pipeline

./: .env.example  .gitattributes  .gitignore  NOTICE  PROJECT_MANIFEST.json  PROJECT_STATUS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml  us_ai_power.yaml
examples/: README.md
experiments/argument_governance/: README.md  final_evaluation.md  final_metrics.json
experiments/evidence_pipeline/: README.md  final_report_20260720.txt
experiments/evidence_pipeline/legacy_code/: extractor_v1.py  extractor_v2.py
prompts/: extract_evidence_v1.md  extract_evidence_v2.md
schemas/: document_record.schema.json  evidence_card.schema.json  evidence_record.schema.json  evidence_record_collection.schema.json  release_manifest.schema.json  release_source_index.schema.json  research_brief.schema.json  review_pack.schema.json
scripts/: build_project_manifest.py  check_open_source.py  export_schemas.py  install_agent_skill.py  offline_demo.py
skills/traceable-research/: SKILL.md
src/research_pipeline/: __init__.py  admission.py  chunker.py  cli.py  config.py  context.py  dedup.py  extractor.py  fetcher.py  ids.py  ingest.py  io_utils.py  manifest.py  models.py  parser.py  quality.py  release.py  storage.py  url_policy.py  verification.py
tests/: test_admission_integrity.py  test_chunker.py  test_core.py  test_extraction_progress.py  test_integrated_workflow.py  test_project_manifest.py  test_providers.py  test_release_integrity.py  test_skill_packaging.py
tests/fixtures/: sample_report.html
(+8 files in other folders)
